--- a/css/css-layout/fundamental-layout-comprehension/styles.css
+++ b/css/css-layout/fundamental-layout-comprehension/styles.css
@@ -18,20 +18,44 @@ body {
   }
   
   .grid {
+    display: grid;
     margin: 0 auto;
     padding: 0 20px;
-    max-width: 980px;
+    max-width: 1280px;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  article {
+    grid-column: 1/5;
+  }
+  
+  aside {
+    grid-column: 5/7;
+    margin-left: 20px;
+  }
+
+  aside ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    gap: 1px;
   }
   
   nav {
     background-color: #000;
     padding: .5em;
+    position: sticky;
+    top: 0;
   }
   
   nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    flex: 1;
+    justify-content: space-around;
+    flex-flow:row wrap;
   }
   
   nav a {
@@ -48,4 +72,31 @@ body {
 
   .feature {
       width: 200px;
+      float: left;
+      margin-right: 30px; 
+  }
+
+  @media screen and (max-width: 900px) {
+    aside ul {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-rows: minmax(100px, auto);
+      gap: 50px;
+      border: 1px solid black;
+    }
+
+    .feature {
+      float: none;
+    }
+    h2 {
+      font-size: 0.9em;
+      margin-top: 350px;
+    }
+    nav ul {
+      align-items:center;
+    }
+    nav a {
+      padding: 20px;
+      line-height: 3;
+    }
   }
